--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -1,128 +1,52 @@
 {
-  "general": {
-    "404": {
-      "title": "404 Page Not Found",
-      "subtext": "The page you were looking for does not exist",
-      "link": "Continue shopping"
-    },
-    "accessibility": {
-      "skip_to_text": "Skip to content",
-      "close": "Close",
-      "unit_price_separator": "per",
-      "error": "Error",
-      "refresh": "Refresh",
-      "loading": "Loading..."
-    },
-    "meta": {
-      "tags": "Tagged \"{{ tags }}\"",
-      "page": "Page {{ page }}"
-    },
-    "search": {
-      "title": "Search",
-      "placeholder": "Search our store...",
-      "submit": "Search",
-      "no_results": "No results found for \"{{ terms }}\"",
-      "results_with_count": {
-        "one": "{{ count }} result for \"{{ terms }}\"",
-        "other": "{{ count }} results for \"{{ terms }}\""
-      }
-    },
-    "newsletter": {
-      "label": "Email",
-      "success": "Thanks for subscribing",
-      "button_label": "Subscribe"
-    },
-    "social": {
-      "share_on_facebook": "Share on Facebook",
-      "share_on_twitter": "Share on Twitter",
-      "share_on_pinterest": "Pin on Pinterest"
-    }
+  "header": {
+    "home": "Home",
+    "products": "Products",
+    "about": "About Us",
+    "testimonials": "Testimonials",
+    "contact": "Contact"
   },
-  "cart": {
-    "title": "Shopping Cart",
-    "empty": "Your cart is empty",
-    "continue_shopping": "Continue shopping",
-    "subtotal": "Subtotal",
-    "shipping_at_checkout": "Shipping calculated at checkout",
-    "update": "Update",
-    "checkout": "Checkout",
-    "view_cart": "View Cart",
-    "close": "Close cart",
-    "quantity": "Quantity",
-    "remove": "Remove"
+  "hero": {
+    "shop_now": "Shop Now"
   },
   "products": {
-    "product": {
-      "add_to_cart": "Add to cart",
-      "description": "Description",
-      "on_sale": "Sale",
-      "sold_out": "Sold out",
-      "unavailable": "Unavailable",
-      "vendor": "Vendor",
-      "sku": "SKU",
-      "quantity": "Quantity",
-      "price": {
-        "from": "From",
-        "regular_price": "Regular price",
-        "sale_price": "Sale price",
-        "unit_price": "Unit price"
-      }
-    }
+    "featured": "Featured Products",
+    "sale": "Sale",
+    "add_to_cart": "Add to Cart",
+    "added_to_cart": "Product added to cart!"
   },
-  "sections": {
-    "header": {
-      "menu": "Menu",
-      "cart": "Cart",
-      "account": "Account",
-      "search": "Search"
-    },
-    "footer": {
-      "copyright": "© {{ date }} {{ shop_name }}. All rights reserved.",
-      "powered_by": "Powered by Shopify"
-    }
+  "about": {
+    "title": "About Us",
+    "view_products": "View Products"
   },
-  "customer": {
-    "account": {
-      "title": "My Account",
-      "details": "Account Details",
-      "view_addresses": "View Addresses",
-      "return": "Return to Account"
-    },
-    "login": {
-      "title": "Login",
-      "email": "Email",
-      "password": "Password",
-      "forgot_password": "Forgot your password?",
-      "sign_in": "Sign In",
-      "guest_title": "Continue as a guest",
-      "guest_continue": "Continue"
-    },
-    "register": {
-      "title": "Create Account",
-      "first_name": "First Name",
-      "last_name": "Last Name",
-      "email": "Email",
-      "password": "Password",
-      "submit": "Create"
-    },
-    "order": {
-      "title": "Order {{ name }}",
-      "date": "Placed on {{ date }}",
-      "cancelled": "Order Cancelled on {{ date }}",
-      "cancelled_reason": "Reason: {{ reason }}",
-      "billing_address": "Billing Address",
-      "payment_status": "Payment Status",
-      "shipping_address": "Shipping Address",
-      "fulfillment_status": "Fulfillment Status",
-      "discount": "Discount",
-      "shipping": "Shipping",
-      "tax": "Tax",
-      "product": "Product",
-      "sku": "SKU",
-      "price": "Price",
-      "quantity": "Quantity",
-      "total": "Total",
-      "subtotal": "Subtotal"
-    }
+  "testimonials": {
+    "title": "Customer Reviews",
+    "text_1": "Great products and high quality. Excellent customer service and fast delivery. I'm very happy with my experience with this store.",
+    "text_2": "Great prices and unmatched quality. I have purchased several products from this store and was happy with each one.",
+    "text_3": "Easy to use website interface and smooth purchasing processes. I highly recommend this store for all your shopping needs.",
+    "text_4": "Great shopping experience from start to finish. Products arrived on time and were exactly as described.",
+    "author_1": "- John Smith",
+    "author_2": "- Sarah Johnson",
+    "author_3": "- Michael Brown",
+    "author_4": "- Emily Davis"
+  },
+  "newsletter": {
+    "title": "Subscribe to Our Newsletter",
+    "subtitle": "Subscribe now to get the latest offers, new products and exclusive discounts",
+    "placeholder": "Your email address",
+    "subscribe": "Subscribe",
+    "success": "Thank you for subscribing to our newsletter!"
+  },
+  "footer": {
+    "about": "About Us",
+    "quick_links": "Quick Links",
+    "home": "Home",
+    "products": "Products",
+    "about": "About Us",
+    "testimonials": "Testimonials",
+    "contact": "Contact",
+    "contact_info": "Contact Info",
+    "follow": "Follow Us",
+    "copyright": "All rights reserved."
   }
 }
